# blurapp

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  MVP_IMPLEMENTATION_SUMMARY.md  PRIVACY.md  README.md  TFLITE_INTEGRATION.md  UPGRADE_TOOLCHAIN_PROPOSAL.md
.github/: copilot-instructions.md
.github/workflows/: detect-tracked-build-outputs.yml  flutter.yml
app/: .flutter-plugins-dependencies  README.md  analysis_options.yaml  pubspec.yaml
app/.cache/: user_summary.json
app/.dart_tool/: package_config.json  package_config_subset  package_graph.json
app/.dart_tool/extension_discovery/: vs_code.json
app/.dart_tool/flutter_build/: dart_plugin_registrant.dart
app/android/: build.gradle  gradle.properties  local.properties  settings.gradle
app/android/app/: build.gradle
app/android/blurcore/: CMakeLists.txt  enhanced_stub.cpp  stub.cpp
app/coverage/: lcov.info
app/docs/: ARCHITECTURE.md
app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
app/ios/Runner/: GeneratedPluginRegistrant.m
app/ios/blurcore/: CMakeLists.txt  ios_bridge.mm
app/lib/: app.dart  main.dart
app/lib/demo/: processing_mode_demo.dart
app/lib/native/: blur_bindings.dart  hybrid_blur_bindings.dart
app/lib/services/: auto_detect_service.dart  gallery_provider.dart  image_picker_service.dart  image_saver_service.dart
app/lib/settings/: privacy_settings_screen.dart
app/lib/theme/: app_icons.dart  app_theme.dart  toolbar_layout_spec.dart  typography_scale.dart
app/temp_project/: README.md  pubspec.yaml
app/temp_project/linux/: CMakeLists.txt
app/temp_project/test/: widget_test.dart
app/temp_project/web/: index.html  manifest.json
app/temp_project/windows/: CMakeLists.txt
app/test/: README.md  test_framework.dart  test_runner.dart  test_setup.dart  widget_test.dart
app/test/helpers/: performance_test_utils.dart
app/test/integration/: user_workflow_test.dart
app/test/performance/: core_performance_test.dart  memory_management_test.dart  memory_performance_test.dart
app/test/phase1/: mediapipe_foundation_test.dart
app/test/phase2/: opencv_blur_test.dart
app/test/templates/: core_test_template.dart  critical_test_template.dart  misc_test_template.dart
app/test/unit/: auto_detect_fallback_test.dart  auto_detect_service_test.dart  blur_engine_mvp_test.dart  blur_pipeline_test.dart  home_screen_test.dart  image_saver_cache_test.dart  mask_to_brush_test.dart  (+5 more)
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
docs/: PROFILING.md
logs/run-17961973796/: 1_build-test.txt  2_analyze-and-test.txt
logs/run-17961974245/: 1_build-test.txt  2_analyze-and-test.txt
logs/run-17962328597/: 1_build-test.txt
logs/run-17962630253/: 1_build-test.txt  2_analyze-and-test.txt
native/: CMakeLists.txt
native/include/: blur.h
native/src/: blur.ccp  blur.cpp
native/test/: test_blur_apply_regions.cpp
scripts/: build.sh  dev-setup.sh  fetch_ci_logs.py  install-hooks.sh  test.sh
(+132 files in other folders)
